--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^7.0.0",
+    "dotenv": "^16.4.5",
     "mini-css-extract-plugin": "^2.9.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
@@ -32,7 +33,9 @@
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "axios": "^1.7.2",
     "html-webpack-plugin": "^5.6.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
